tests/ui/issues/issue-50582.stderr
error[E0658]: `for` is not allowed in a `const`
  --> $DIR/issue-50582.rs:2:20
   |
LL |     Vec::<[(); 1 + for x in 0..1 {}]>::new();
   |                    ^^^^^^^^^^^^^^^^
   |
   = note: see issue #87575 <https://github.com/rust-lang/rust/issues/87575> for more information
   = help: add `#![feature(const_for)]` to the crate attributes to enable

error[E0277]: cannot add `()` to `{integer}`
  --> $DIR/issue-50582.rs:2:18
   |
LL |     Vec::<[(); 1 + for x in 0..1 {}]>::new();
   |                  ^ no implementation for `{integer} + ()`
   |
   = help: the trait `Add<()>` is not implemented for `{integer}`
   = help: the following other types implement trait `Add<Rhs>`:
             <isize as Add>
             <isize as Add<&isize>>
             <i8 as Add>
             <i8 as Add<&i8>>
             <i16 as Add>
             <i16 as Add<&i16>>
             <i32 as Add>
             <i32 as Add<&i32>>
           and 48 others

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0658.
For more information about an error, try `rustc --explain E0277`.
